# pirat

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  docker-build.sh
.github/workflows/: build.yml  clean.yml
docs/devs/: modules.md
src/: CMakeLists.txt
src/commons/: DSP.h  DoubleClicker.h  Gate.h  GrabValue.h  Slew.h  Utils.h
src/legio/: Makefile  legio.cpp
src/noisegate/: Biquad.cpp  Biquad.h  CMakeLists.txt  EnvelopeFollower.cpp  EnvelopeFollower.h  Expander.cpp  Expander.h  Indicators.cpp  Indicators.h  NoiseGate.cpp  NoiseGate.h  OnePoleFilters.h  SlewLimiter.h
src/patchinit/: Makefile  patchinit.cpp
src/pirat/: Bilinear.h  CMakeLists.txt  CrossFade.h  Highpass1.cpp  Highpass1.h  Lowpass1.cpp  Lowpass1.h  PiRATDist.cpp  PiRATDist.h  SplineInterpolator.h  Splines.cpp  Splines.h  TFGain.cpp  TFGain.h  Transfer.h
src/prat/: Bilinear.h  CMakeLists.txt  CrossFade.h  Highpass1.cpp  Highpass1.h  Lowpass1.cpp  Lowpass1.h  PRatDist.cpp  PRatDist.h  SplineInterpolator.h  Splines.cpp  Splines.h  TFGain.cpp  TFGain.h  Transfer.h
src/test/: test.cpp
src/vcvrack/: Makefile  PRat.cpp  PiRAT.cpp  plugin.cpp  plugin.hpp  plugin.json
src/versio/: Makefile  versio.cpp
